# document-structurer

./: README.md  app.py  pyproject.toml  requirements.txt
