[project]
name = "document-capturer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.3.0",
    "streamlit>=1.51.0",
    "xlsxwriter>=3.2.9",
]
